Bug 50407 - [bisected IVB]Oglc fbo-multisample(advanced.drawbuffers.singletomsaa) regressed
Summary: [bisected IVB]Oglc fbo-multisample(advanced.drawbuffers.singletomsaa) regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Paul Berry
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-27 19:54 UTC by lu hua
Modified: 2012-07-26 07:57 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-05-27 19:54:15 UTC
System Environment:
--------------------------
Arch:           x86_64
Platform:       Ivybridge
Libdrm:          (master)2.4.34-2-g481234f2909c0506962a2f42da862da6a9b13fd8
Mesa:            (master)6404095fbab74a6194081374bd56786d07c5d561
Xserver:        
(master)xorg-server-1.12.0-193-g594b4a4f0601066d09e49a84c5af8c2eb6f07240
Xf86_video_intel: (master)2.19.0-90-g8ea4ba081de0206351394481f54dcbe6922a085b
Libva:           (staging)f12f80371fb534e6bbf248586b3c17c298a31f4e
Libva_intel_driver: (staging)82fa52510a37ab645daaa3bb7091ff5096a20d0b
Kernel_unstable: 
(drm-intel-next-queued)eeafaaca763408c099d2ade3a69e0716f296a97b

Bug detailed description:
-------------------------
It fails on ivybridge with mesa master branch.It doesn't happen on mesa 8.0
branch.

Bisect show:b08545199ac8a01392a805f158d22cc03060a6fb is the first bad commit
commit b08545199ac8a01392a805f158d22cc03060a6fb
Author:     Paul Berry <stereotype441@gmail.com>
AuthorDate: Wed May 9 16:00:43 2012 -0700
Commit:     Paul Berry <stereotype441@gmail.com>
CommitDate: Fri May 25 08:45:11 2012 -0700

    i965/blorp: Enable blorp blits on Gen7.

    Gen7 support for blorp (blits using the render bath) now works for
    non-MSAA purposes.  This patch enables it.

    Since blorp operations re-use the logic for HiZ ops, this required
    adding a case to the switch statement in gen7_blorp_emit_wm_config(),
    to allow for the case where no HiZ op is being performed.

    Reviewed-by: Chad Versace <chad.versace@linux.intel.com>
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Reproduce steps:
----------------
1. start x
2. ./oglconform -z -suite all -v 2 -D 123 -test fbo-multisample \ advanced.drawbuffers.singletomsaa
Comment 1 Paul Berry 2012-07-20 19:42:25 UTC
A patch to fix this bug is currently awaiting review on the Mesa-dev list: http://lists.freedesktop.org/archives/mesa-dev/2012-July/024229.html
Comment 2 Paul Berry 2012-07-24 22:59:22 UTC
Fixed by commit ff9313fac70fa85d051dd4d2b9d3402d39f67cea
Author: Paul Berry <stereotype441@gmail.com>
Date:   Fri Jul 13 14:59:13 2012 -0700

    i965/blorp: Handle DrawBuffers properly.
    
    When the client program uses glDrawBuffer() or glDrawBuffers() to
    select more than one color buffer for drawing into, and then performs
    a blit, we need to blit into every single enabled draw buffer.
    
    +2 oglconforms.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=50407
    
    Reviewed-by: Chad Versace <chad.versace@linux.intel.com>
Comment 3 lu hua 2012-07-26 07:57:40 UTC
Verified.Fixed by commit ff9313fac70fa85d051dd4d2b9d3402d39f67cea.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.